👌 fix: Update css on mobile app

--- a/app/src/presentation/pages/css/Home.module.css
+++ b/app/src/presentation/pages/css/Home.module.css
@@ -29,8 +29,7 @@
 }
 
 .content {
-    background-color: #f4f5fe;
-    margin-top: 12px;
+    background-color: white;
 }
 
 .date {
@@ -68,6 +67,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 16px;
     padding-bottom: 40px;
     width: 100%;
 }
@@ -93,6 +93,8 @@
     }
 
     .content {
+        margin-top: 12px;
+        background-color: #f4f5fe;
         --ion-background-color: #f4f5fe;
     }
 
